--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "whatwg-fetch": "^0.8.1"
   },
   "jest": {
+    "rootDir": "app",
     "scriptPreprocessor": "<rootDir>/preprocessor.js",
     "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
+      "../node_modules/react"
     ]
   }
 }
